--- a/8139/Makefile
+++ b/8139/Makefile
@@ -6,3 +6,8 @@ all:
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean 
 
+load: 
+	sudo insmod 8139-jack.ko
+
+unload:
+	sudo rmmod 8139-jack
